force-app/main/default/objects/copado_envmgr__EnvironmentPersona__c/fields/copado_envmgr__DefinitionJson__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__DefinitionJson__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>User Definition JSON. See Salesforce user creation definition json for details.</description>
    <inlineHelpText>User Definition JSON. See Salesforce user creation definition json for details.</inlineHelpText>
    <label>Definition Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>