force-app/main/default/objects/copado_envmgr__EnvironmentPersona__c/fields/copado_envmgr__EnvironmentDefinition__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__EnvironmentDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment Definition</label>
    <referenceTo>copado_envmgr__EnvironmentDefinition__c</referenceTo>
    <relationshipLabel>Environment Personas</relationshipLabel>
    <relationshipName>Environment_Personas</relationshipName>
    <type>Lookup</type>
</CustomField>